优化代码,升级组件

--- a/joine-admin/src/main/resources/templates/system/notice/add.html
+++ b/joine-admin/src/main/resources/templates/system/notice/add.html
@@ -63,7 +63,7 @@
 				}
 			},
 			submitHandler: function(form) {
-				var sHTML = $('.summernote').code();
+                var sHTML = $('.summernote').summernote('code');
 				$("#noticeContent").val(sHTML);
 				$.operate.save(prefix + "/add", $('#form-notice-add').serialize());
 			}
