优化用户导入

--- a/joine-generator/src/main/resources/vm/java/Controller.java.vm
+++ b/joine-generator/src/main/resources/vm/java/Controller.java.vm
@@ -3,7 +3,6 @@ package ${basePackage}.web.controller.${moduleName};
 import java.util.List;
 import org.apache.shiro.authz.annotation.RequiresPermissions;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Controller;
 import org.springframework.ui.ModelMap;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -17,7 +16,7 @@ import ${package}.service.I${className}Service;
 import com.github.joine.framework.web.base.BaseController;
 import com.github.joine.framework.web.page.TableDataInfo;
 import com.github.joine.common.base.AjaxResult;
-import com.github.joine.common.utils.ExcelUtil;
+import com.github.joine.common.utils.poi.ExcelUtil;
 
 /**
  * ${tableComment} 信息操作处理
