--- a/joine-admin/src/main/resources/templates/system/role/role.html
+++ b/joine-admin/src/main/resources/templates/system/role/role.html
@@ -138,6 +138,29 @@
         var url = prefix + '/rule/' + roleId;
         $.modal.open("分配数据权限", url);
     }
+
+    /* 角色状态显示 */
+    function statusTools(row) {
+        if (row.status == 1) {
+            return '<i class=\"fa fa-toggle-off text-info fa-2x\" onclick="enable(\'' + row.roleId + '\')"></i> ';
+        } else {
+            return '<i class=\"fa fa-toggle-on text-info fa-2x\" onclick="disable(\'' + row.roleId + '\')"></i> ';
+        }
+    }
+
+    /* 角色管理-停用 */
+    function disable(roleId) {
+        $.modal.confirm("确认要停用角色吗？", function() {
+            $.operate.post(prefix + "/changeStatus", { "roleId": roleId, "status": 1 });
+        })
+    }
+
+    /* 角色管理启用 */
+    function enable(roleId) {
+        $.modal.confirm("确认要启用角色吗？", function() {
+            $.operate.post(prefix + "/changeStatus", { "roleId": roleId, "status": 0 });
+        })
+    }
 </script>
 </body>
 </html>
