--- a/joine-admin/src/main/resources/templates/system/user/user.html
+++ b/joine-admin/src/main/resources/templates/system/user/user.html
@@ -230,6 +230,29 @@
         var url = prefix + '/resetPwd/' + userId;
         $.modal.open("重置密码", url, '800', '300');
     }
+
+    /* 用户状态显示 */
+    function statusTools(row) {
+        if (row.status == 1) {
+            return '<i class=\"fa fa-toggle-off text-info fa-2x\" onclick="enable(\'' + row.userId + '\')"></i> ';
+        } else {
+            return '<i class=\"fa fa-toggle-on text-info fa-2x\" onclick="disable(\'' + row.userId + '\')"></i> ';
+        }
+    }
+
+    /* 用户管理-停用 */
+    function disable(userId) {
+        $.modal.confirm("确认要停用用户吗？", function() {
+            $.operate.post(prefix + "/changeStatus", { "userId": userId, "status": 1 });
+        })
+    }
+
+    /* 用户管理启用 */
+    function enable(userId) {
+        $.modal.confirm("确认要启用用户吗？", function() {
+            $.operate.post(prefix + "/changeStatus", { "userId": userId, "status": 0 });
+        })
+    }
 </script>
 </body>
 <form id="importForm" enctype="multipart/form-data" class="mt20 mb10" style="display: none;">
