--- a/joine-admin/src/main/resources/templates/system/user/user.html
+++ b/joine-admin/src/main/resources/templates/system/user/user.html
@@ -77,7 +77,7 @@
                 <i class="fa fa-download"></i> 导出
             </a>
             <a class="btn btn-info" onclick="$.table.importExcel()" shiro:hasPermission="system:user:import">
-                <i class="fa fa-download"></i> 导入
+                <i class="fa fa-upload"></i> 导入
             </a>
             <a class="btn btn-info" onclick="$.operate.add()" shiro:hasPermission="system:user:add">
                 <i class="fa fa-plus"></i> 新增
