--- a/joine-generator/src/main/resources/vm/java/Controller.java.vm
+++ b/joine-generator/src/main/resources/vm/java/Controller.java.vm
@@ -14,7 +14,7 @@ import com.github.joine.common.enums.BusinessType;
 import ${package}.domain.${className};
 import ${package}.service.I${className}Service;
 import com.github.joine.framework.web.base.BaseController;
-import com.github.joine.framework.web.page.TableDataInfo;
+import com.github.joine.common.page.TableDataInfo;
 import com.github.joine.common.base.AjaxResult;
 import com.github.joine.common.utils.poi.ExcelUtil;
 
