--- a/joine-admin/src/main/resources/templates/login.html
+++ b/joine-admin/src/main/resources/templates/login.html
@@ -34,7 +34,7 @@
                     <input type="password" name="password" class="form-control pword m-b" placeholder="密码"/>
 					<div class="row" th:if="${captchaEnabled==true}">
 						<div class="col-xs-6">
-						    <input type="text" name="validateCode" class="form-control code" placeholder="验证码" maxlength="5">
+						    <input type="text" name="validateCode" class="form-control code" placeholder="验证码" maxlength="5" autocomplete="off">
 						</div>
 						<div class="col-xs-6">
 							<a href="javascript:void(0);" title="点击更换验证码">
