--- a/joine-admin/src/main/resources/templates/monitor/online/online.html
+++ b/joine-admin/src/main/resources/templates/monitor/online/online.html
@@ -80,7 +80,7 @@
                     title: '主机'
                 },
                 {
-                    field: 'longinLocation',
+                    field: 'loginLocation',
                     title: '登录地点'
                 },
                 {
