--- a/joine-admin/src/main/resources/templates/monitor/operlog/operlog.html
+++ b/joine-admin/src/main/resources/templates/monitor/operlog/operlog.html
@@ -45,14 +45,14 @@
         </div>
 
         <div class="btn-group-sm hidden-xs" id="toolbar" role="group">
-            <a class="btn btn-info" onclick="$.table.exportExcel()" shiro:hasPermission="monitor:logininfor:export">
+            <a class="btn btn-info" onclick="$.table.exportExcel()" shiro:hasPermission="monitor:operlog:export">
                 <i class="fa fa-download"></i> 导出
             </a>
             <a class="btn btn-danger btn-del disabled" onclick="$.operate.removeAll()"
-               shiro:hasPermission="monitor:logininfor:remove">
+               shiro:hasPermission="monitor:operlog:remove">
                 <i class="fa fa-remove"></i> 删除
             </a>
-            <a class="btn btn-danger" onclick="$.operate.clean()" shiro:hasPermission="monitor:logininfor:remove">
+            <a class="btn btn-danger" onclick="$.operate.clean()" shiro:hasPermission="monitor:operlog:remove">
                 <i class="fa fa-trash"></i> 清空
             </a>
         </div>
