--- a/joine-admin/src/main/resources/templates/system/user/user.html
+++ b/joine-admin/src/main/resources/templates/system/user/user.html
@@ -79,10 +79,10 @@
             <a class="btn btn-info" onclick="$.table.importExcel()" shiro:hasPermission="system:user:import">
                 <i class="fa fa-upload"></i> 导入
             </a>
-            <a class="btn btn-info" onclick="$.operate.add()" shiro:hasPermission="system:user:add">
+            <a class="btn btn-info" onclick="$.operate.addTab()" shiro:hasPermission="system:user:add">
                 <i class="fa fa-plus"></i> 新增
             </a>
-            <a class="btn btn-info btn-edit disabled" onclick="$.operate.edit()" shiro:hasPermission="system:user:edit">
+            <a class="btn btn-info btn-edit disabled" onclick="$.operate.editTab()" shiro:hasPermission="system:user:edit">
                 <i class="fa fa-edit"></i> 修改
             </a>
             <a class="btn btn-danger btn-del disabled" onclick="$.operate.removeAll()"
@@ -177,7 +177,7 @@
                     align: 'center',
                     formatter: function (value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-info btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(\'' + row.userId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+                        actions.push('<a class="btn btn-info btn-xs ' + editFlag + '" href="#" onclick="$.operate.editTab(\'' + row.userId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
                         actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="$.operate.remove(\'' + row.userId + '\')"><i class="fa fa-remove"></i>删除</a> ');
                         actions.push('<a class="btn btn-info btn-xs ' + resetPwdFlag + '" href="#" onclick="resetPwd(\'' + row.userId + '\')"><i class="fa fa-key"></i>重置</a>');
                         return actions.join('');
