--- a/joine-generator/src/main/resources/vm/java/ServiceImpl.java.vm
+++ b/joine-generator/src/main/resources/vm/java/ServiceImpl.java.vm
@@ -15,8 +15,8 @@ import com.github.joine.common.support.Convert;
  * @date ${datetime}
  */
 @Service
-public class ${className}ServiceImpl implements I${className}Service 
-{
+public class ${className}ServiceImpl implements I${className}Service {
+
 	@Autowired
 	private ${className}Mapper ${classname}Mapper;
 
