--- a/joine-generator/src/main/resources/vm/java/domain.java.vm
+++ b/joine-generator/src/main/resources/vm/java/domain.java.vm
@@ -16,8 +16,8 @@ import java.util.Date;
  * @author ${author}
  * @date ${datetime}
  */
-public class ${className} extends BaseEntity
-{
+public class ${className} extends BaseEntity {
+
 	private static final long serialVersionUID = 1L;
 	
 #foreach ($column in $columns)
