样式修改及js封装-0225

--- a/joine-admin/src/main/resources/templates/login.html
+++ b/joine-admin/src/main/resources/templates/login.html
@@ -31,8 +31,8 @@
                     <h4 class="no-margins">登录：</h4>
                     <!--<p class="m-t-md">厌白玉以为面兮，怀琬琰以为心</p>-->
                     <input type="text"     name="username" class="form-control uname"     placeholder="用户名"/>
-                    <input type="password" name="password" class="form-control pword m-b" placeholder="密码"/>
-					<div class="row" th:if="${captchaEnabled==true}">
+                    <input type="password" name="password" class="form-control pword" placeholder="密码"/>
+					<div class="row m-t" th:if="${captchaEnabled==true}">
 						<div class="col-xs-6">
 						    <input type="text" name="validateCode" class="form-control code" placeholder="验证码" maxlength="5" autocomplete="off">
 						</div>
