--- a/joine-admin/src/main/resources/static/joine/css/je-ui.css
+++ b/joine-admin/src/main/resources/static/joine/css/je-ui.css
@@ -182,9 +182,15 @@
 label.error {
     position: absolute;
     right: 18px;
-    top: 7px;
+    top: 10px;
     color: #ef392b;
     font-size: 12px
+}
+
+.input-group label.error {
+    z-index: 99;
+    right: 42px;
+
 }
 
 .Validform_error, input.error, select.error {
@@ -496,11 +502,20 @@ label {
 }
 
 .table-striped .table > thead:first-child > tr:first-child > th {
-    color: #333;
+    font-weight: normal;
+    font-size: 13px
+}
+
+.table-striped table thead {
+    background-color: #eff3f8;
 }
 
 .table-bordered td, .table-bordered th {
     border: 1px solid #ddd !important
+}
+
+.fixed-table-container thead th  >.both{
+    display: inline-block
 }
 
 /** 首页样式 */
