--- a/joine-admin/src/main/resources/templates/system/menu/edit.html
+++ b/joine-admin/src/main/resources/templates/system/menu/edit.html
@@ -10,7 +10,10 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label ">上级菜单：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" onclick="selectMenuTree()" id="treeName" readonly="true" th:value="${menu.parentName == null ? '无' : menu.parentName}"/>
+					<div class="input-group">
+						<input class="form-control" type="text" onclick="selectMenuTree()" id="treeName" readonly="true" th:value="${menu.parentName == null ? '无' : menu.parentName}"/>
+						<span class="input-group-addon"><i class="fa fa-search"></i></span>
+					</div>
 				</div>
 			</div>
 			<div class="form-group">
@@ -24,7 +27,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">菜单名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="menuName" id="menuName" th:field="*{menuName}">
+					<input class="form-control" type="text" name="menuName" id="menuName" th:field="*{menuName}" required>
 				</div>
 			</div>
 			<div class="form-group">
@@ -42,7 +45,7 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">显示排序：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" name="orderNum" th:field="*{orderNum}">
+					<input class="form-control" type="text" name="orderNum" th:field="*{orderNum}" required>
 				</div>
 			</div>
 			<div class="form-group">
@@ -78,11 +81,7 @@
 
         $("#form-menu-edit").validate({
         	rules:{
-        		menuType:{
-        			required:true,
-        		},
         		menuName:{
-        			required:true,
         			remote: {
                         url: prefix + "/checkMenuNameUnique",
                         type: "post",
@@ -104,15 +103,15 @@
                     }
         		},
         		orderNum:{
-        			required:true,
         			digits:true
-        		},
+        		}
         	},
         	messages: {
                 "menuName": {
                     remote: "菜单已经存在"
                 }
-            }
+            },
+            focusCleanup: true
         });
         
         function submitHandler() {
