--- a/joine-admin/src/main/resources/templates/system/notice/edit.html
+++ b/joine-admin/src/main/resources/templates/system/notice/edit.html
@@ -11,7 +11,7 @@
         <div class="form-group">
             <label class="col-sm-3 control-label">公告标题：</label>
             <div class="col-sm-8">
-                <input id="noticeTitle" name="noticeTitle" th:field="*{noticeTitle}" class="form-control" type="text">
+                <input id="noticeTitle" name="noticeTitle" th:field="*{noticeTitle}" class="form-control" type="text" required>
             </div>
         </div>
         <div class="form-group">
@@ -94,17 +94,16 @@
     }
 
     $("#form-notice-edit").validate({
-        rules: {
-            noticeTitle: {
-                required: true,
-            }
-        },
-        submitHandler: function (form) {
+        focusCleanup: true
+    });
+
+    function submitHandler() {
+        if ($.validate.form()) {
             var sHTML = $('.summernote').summernote('code');
             $("#noticeContent").val(sHTML);
             $.operate.save(prefix + "/edit", $('#form-notice-edit').serialize());
         }
-    });
+    }
 </script>
 </body>
 </html>
