--- a/joine-admin/src/main/resources/templates/system/user/profile/resetPwd.html
+++ b/joine-admin/src/main/resources/templates/system/user/profile/resetPwd.html
@@ -15,19 +15,19 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label">旧密码：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="password" name="oldPassword" id="oldPassword">
+					<input class="form-control" type="password" name="oldPassword" id="oldPassword" required>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">新密码：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="password" name="newPassword" id="newPassword">
+					<input class="form-control" type="password" name="newPassword" id="newPassword" required>
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">再次确认：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="password" name="confirm" id="confirm">
+					<input class="form-control" type="password" name="confirm" id="confirm" required>
 					<span class="help-block m-b-none"><i class="fa fa-info-circle"></i> 请再次输入您的密码</span>
 				</div>
 			</div>
@@ -39,7 +39,6 @@
 		$("#form-user-resetPwd").validate({
 			rules:{
 				oldPassword:{
-					required:true,
 					remote: {
 	                    url: ctx + "system/user/profile/checkPassword",
 	                    type: "get",
@@ -52,12 +51,10 @@
 	                }
 				},
                 newPassword: {
-	                required: true,
 	                minlength: 5,
 	    			maxlength: 20
 	            },
 	            confirm: {
-	                required: true,
 	                equalTo: "#newPassword"
 	            }
 			},
@@ -76,7 +73,8 @@
 	                equalTo: "两次密码输入不一致"
 	            }
 
-	        }
+	        },
+            focusCleanup: true
 		});
 		
 		function submitHandler() {
