--- a/joine-admin/src/main/resources/templates/system/user/resetPwd.html
+++ b/joine-admin/src/main/resources/templates/system/user/resetPwd.html
@@ -9,13 +9,13 @@
 			<div class="form-group">
 				<label class="col-sm-3 control-label ">登录名称：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="text" readonly="true" name="loginName" th:value="${user.loginName}"/>
+					<input class="form-control" type="text" readonly="true" name="loginName" th:value="${user.loginName}">
 				</div>
 			</div>
 			<div class="form-group">
 				<label class="col-sm-3 control-label">输入密码：</label>
 				<div class="col-sm-8">
-					<input class="form-control" type="password" name="password" id="password" th:value="${@config.getKey('sys.user.initPassword')}">
+					<input class="form-control" type="password" name="password" id="password" th:value="${@config.getKey('sys.user.initPassword')}" required>
 				</div>
 			</div>
 		</form>
@@ -25,11 +25,11 @@
 		$("#form-user-resetPwd").validate({
 			rules:{
 				password:{
-					required:true,
 					minlength: 5,
 					maxlength: 20
-				},
-			}
+				}
+			},
+            focusCleanup: true
 		});
 		
 		function submitHandler() {
