--- a/joine-admin/src/main/resources/templates/monitor/online/online.html
+++ b/joine-admin/src/main/resources/templates/monitor/online/online.html
@@ -51,7 +51,7 @@
             exportUrl: prefix + "/export",
             sortName: "lastAccessTime",
             sortOrder: "desc",
-            search: false,
+            showExport: true,
             escape: true,
             columns: [{
                 checkbox: true
