--- a/joine-admin/src/main/resources/templates/system/dept/dept.html
+++ b/joine-admin/src/main/resources/templates/system/dept/dept.html
@@ -32,7 +32,7 @@
 		        <a class="btn btn-info" onclick="$.operate.add(100)" shiro:hasPermission="system:dept:add">
                     <i class="fa fa-plus"></i> 新增
                 </a>
-                <a class="btn btn-info" onclick="$.operate.editTree()" shiro:hasPermission="system:dept:edit">
+                <a class="btn btn-info" onclick="$.operate.edit()" shiro:hasPermission="system:dept:edit">
 		            <i class="fa fa-edit"></i> 修改
 		        </a>
                 <a class="btn btn-info" id="expandAllBtn">
