--- a/joine-admin/src/main/resources/templates/system/config/config.html
+++ b/joine-admin/src/main/resources/templates/system/config/config.html
@@ -42,7 +42,7 @@
             </form>
         </div>
 
-        <div class="btn-group-sm hidden-xs" id="toolbar" role="group">
+        <div class="btn-group-sm " id="toolbar" role="group">
             <a class="btn btn-info" onclick="$.table.exportExcel()" shiro:hasPermission="system:config:export">
                 <i class="fa fa-download"></i> 导出
             </a>
