--- a/joine-admin/src/main/resources/templates/monitor/job/job.html
+++ b/joine-admin/src/main/resources/templates/monitor/job/job.html
@@ -35,7 +35,7 @@
             </form>
         </div>
 
-        <div class="btn-group-sm hidden-xs" id="toolbar" role="group">
+        <div class="btn-group-sm " id="toolbar" role="group">
             <a class="btn btn-info" onclick="$.table.exportExcel()" shiro:hasPermission="monitor:job:export">
                 <i class="fa fa-download"></i> 导出
             </a>
