--- a/joine-admin/src/main/resources/templates/monitor/logininfor/logininfor.html
+++ b/joine-admin/src/main/resources/templates/monitor/logininfor/logininfor.html
@@ -38,7 +38,7 @@
 				</form>
 			</div>
 			
-			<div class="btn-group-sm hidden-xs" id="toolbar" role="group">
+			<div class="btn-group-sm " id="toolbar" role="group">
 				<a class="btn btn-info" onclick="$.table.exportExcel()" shiro:hasPermission="monitor:logininfor:export">
 					<i class="fa fa-download"></i> 导出
 				</a>
