--- a/joine-admin/src/main/resources/templates/system/notice/notice.html
+++ b/joine-admin/src/main/resources/templates/system/notice/notice.html
@@ -31,7 +31,7 @@
 				</form>
 			</div>
 			
-	        <div class="btn-group-sm hidden-xs" id="toolbar" role="group">
+	        <div class="btn-group-sm " id="toolbar" role="group">
 		        <a class="btn btn-info" onclick="$.operate.addFull()" shiro:hasPermission="system:notice:add">
 		            <i class="fa fa-plus"></i> 新增
 		        </a>
