--- a/joine-admin/src/main/resources/templates/system/notice/notice.html
+++ b/joine-admin/src/main/resources/templates/system/notice/notice.html
@@ -62,7 +62,7 @@
                 createUrl: prefix + "/add",
                 updateUrl: prefix + "/edit/{id}",
                 removeUrl: prefix + "/remove",
-                modalName: "公告"
+                modalName: "公告",
                 columns: [{
 		            checkbox: true
 		        },
