--- a/joine-admin/src/main/resources/templates/monitor/operlog/operlog.html
+++ b/joine-admin/src/main/resources/templates/monitor/operlog/operlog.html
@@ -80,6 +80,7 @@
             sortOrder: "desc",
             modalName: "操作日志",
             escape: true,
+            showPageGo: true,
             columns: [{
                 checkbox: true
             },
