--- a/joine-quartz/src/main/resources/templates/monitor/job/detail.html
+++ b/joine-quartz/src/main/resources/templates/monitor/job/detail.html
@@ -3,10 +3,10 @@
 <meta charset="utf-8">
 <head th:include="include :: header"></head>
 <body class="white-bg">
-	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
-	
+<div class="wrapper wrapper-content animated fadeInRight ibox-content">
+
 	<form class="form-horizontal m-t" id="jobLogForm" th:if="${name == 'jobLog'}">
-	    <div class="form-group">
+		<div class="form-group">
 			<label class="col-sm-3 control-label">日志序号：</label>
 			<div class="form-control-static" th:text="${jobLog.jobLogId}">
 			</div>
@@ -42,9 +42,9 @@
 			</div>
 		</div>
 	</form>
-	
+
 	<form class="form-horizontal m-t" id="jobForm" th:if="${name == 'job'}">
-	    <div class="form-group">
+		<div class="form-group">
 			<label class="col-sm-3 control-label">任务序号：</label>
 			<div class="form-control-static" th:text="${job.jobId}">
 			</div>
@@ -82,12 +82,17 @@
 			<div class="form-control-static" th:if="${job.misfirePolicy == '3'}">放弃执行</div>
 		</div>
 		<div class="form-group">
+			<label class="col-sm-3 control-label">并发执行：</label>
+			<div class="form-control-static" th:class="${job.concurrent == '0' ? 'label label-primary' : 'label label-danger'}" th:text="${job.concurrent == '0' ? '允许' : '禁止'}">
+			</div>
+		</div>
+		<div class="form-group">
 			<label class="col-sm-3 control-label">执行状态：</label>
 			<div class="form-control-static" th:class="${job.status == '0' ? 'label label-primary' : 'label label-danger'}" th:text="${job.status == '0' ? '正常' : '暂停'}">
 			</div>
 		</div>
 	</form>
-	
-    </div>
+
+</div>
 </body>
 </html>
