--- a/joine-quartz/src/main/resources/templates/monitor/job/job.html
+++ b/joine-quartz/src/main/resources/templates/monitor/job/job.html
@@ -20,37 +20,33 @@
                         <li>
                             任务状态：<select name="status" th:with="type=${@dict.getType('sys_job_status')}">
                             <option value="">所有</option>
-                            <option th:each="dict : ${type}" th:text="${dict.dictLabel}"
-                                    th:value="${dict.dictValue}"></option>
+                            <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
                         </select>
                         </li>
                         <li>
-                            <a class="btn btn-info btn-rounded btn-sm" onclick="$.table.search()"><i
-                                    class="fa fa-search"></i>&nbsp;搜索</a>
-                            <a class="btn btn-info btn-rounded btn-sm" onclick="$.form.reset()"><i
-                                    class="fa fa-refresh"></i>&nbsp;重置</a>
+                            <a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
+                            <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
                         </li>
                     </ul>
                 </div>
             </form>
         </div>
 
-        <div class="btn-group-sm " id="toolbar" role="group">
-            <a class="btn btn-info" onclick="$.table.exportExcel()" shiro:hasPermission="monitor:job:export">
+        <div class="btn-group-sm" id="toolbar" role="group">
+            <a class="btn btn-success" onclick="$.operate.add()" shiro:hasPermission="monitor:job:add">
+                <i class="fa fa-plus"></i> 新增
+            </a>
+            <a class="btn btn-primary btn-edit disabled" onclick="$.operate.edit()" shiro:hasPermission="system:job:edit">
+                <i class="fa fa-edit"></i> 修改
+            </a>
+            <a class="btn btn-danger btn-del disabled" onclick="$.operate.removeAll()" shiro:hasPermission="monitor:job:remove">
+                <i class="fa fa-remove"></i> 删除
+            </a>
+            <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="monitor:job:export">
                 <i class="fa fa-download"></i> 导出
             </a>
             <a class="btn btn-info" onclick="javascript:jobLog()" shiro:hasPermission="monitor:job:list">
                 <i class="fa fa-list"></i> 日志
-            </a>
-            <a class="btn btn-info" onclick="$.operate.add()" shiro:hasPermission="monitor:job:add">
-                <i class="fa fa-plus"></i> 新增
-            </a>
-            <a class="btn btn-info btn-edit disabled" onclick="$.operate.edit()" shiro:hasPermission="system:job:edit">
-                <i class="fa fa-edit"></i> 修改
-            </a>
-            <a class="btn btn-danger btn-del disabled" onclick="$.operate.removeAll()"
-               shiro:hasPermission="monitor:job:remove">
-                <i class="fa fa-remove"></i> 删除
             </a>
         </div>
 
@@ -68,7 +64,7 @@
     var datas = [[${@dict.getType('sys_job_status')}]];
     var prefix = ctx + "monitor/job";
 
-    $(function () {
+    $(function() {
         var options = {
             url: prefix + "/list",
             detailUrl: prefix + "/detail/{id}",
@@ -124,10 +120,10 @@
                 {
                     title: '操作',
                     align: 'center',
-                    formatter: function (value, row, index) {
+                    formatter: function(value, row, index) {
                         var actions = [];
-                        actions.push('<a class="btn btn-info btn-xs ' + statusFlag + '" href="#" onclick="run(\'' + row.jobId + '\')"><i class="fa fa-play-circle-o"></i> 执行</a> ');
-                        actions.push('<a class="btn btn-info btn-xs ' + detailFlag + '" href="#" onclick="$.operate.detail(\'' + row.jobId + '\')"><i class="fa fa-search"></i>详细</a> ');
+                        actions.push('<a class="btn btn-primary btn-xs ' + statusFlag + '" href="#" onclick="run(\'' + row.jobId + '\')"><i class="fa fa-play-circle-o"></i> 执行一次</a> ');
+                        actions.push('<a class="btn btn-warning btn-xs ' + detailFlag + '" href="#" onclick="$.operate.detail(\'' + row.jobId + '\')"><i class="fa fa-search"></i>详细</a> ');
                         return actions.join('');
                     }
                 }]
@@ -144,28 +140,28 @@
         }
     }
 
-    /*立即执行一次*/
+    /* 立即执行一次 */
     function run(jobId) {
-        $.modal.confirm("确认要立即执行任务吗？", function () {
-            $.operate.post(prefix + "/run", {"jobId": jobId});
+        $.modal.confirm("确认要立即执行一次任务吗？", function() {
+            $.operate.post(prefix + "/run", { "jobId": jobId});
         })
     }
 
-    /*调度任务-停用*/
+    /* 调度任务-停用 */
     function stop(jobId) {
-        $.modal.confirm("确认要停用任务吗？", function () {
-            $.operate.post(prefix + "/changeStatus", {"jobId": jobId, "status": 1});
+        $.modal.confirm("确认要停用任务吗？", function() {
+            $.operate.post(prefix + "/changeStatus", { "jobId": jobId, "status": 1 });
         })
     }
 
-    /*调度任务-启用*/
+    /* 调度任务-启用 */
     function start(jobId) {
-        $.modal.confirm("确认要启用任务吗？", function () {
-            $.operate.post(prefix + "/changeStatus", {"jobId": jobId, "status": 0});
+        $.modal.confirm("确认要启用任务吗？", function() {
+            $.operate.post(prefix + "/changeStatus", { "jobId": jobId, "status": 0 });
         })
     }
 
-    //调度日志查询
+    /* 调度日志查询 */
     function jobLog(id) {
         var url = ctx + 'monitor/jobLog';
         createMenuItem(url, "调度日志");
