优化前端, 集成Apache BeanUtils组件, 修复问题

--- a/joine-admin/src/main/resources/templates/system/config/edit.html
+++ b/joine-admin/src/main/resources/templates/system/config/edit.html
@@ -48,6 +48,7 @@
 	    $("#form-config-edit").validate({
 	        rules: {
 	            configKey: {
+                    onkeyup: false,
 	                remote: {
 	                    url: prefix + "/checkConfigKeyUnique",
 	                    type: "post",
