--- a/joine-admin/src/main/resources/templates/system/menu/edit.html
+++ b/joine-admin/src/main/resources/templates/system/menu/edit.html
@@ -80,7 +80,8 @@
         });
 
         $("#form-menu-edit").validate({
-        	rules:{
+        	onkeyup: false,
+			rules:{
         		menuName:{
         			remote: {
                         url: prefix + "/checkMenuNameUnique",
