--- a/joine-admin/src/main/resources/templates/system/user/edit.html
+++ b/joine-admin/src/main/resources/templates/system/user/edit.html
@@ -132,7 +132,8 @@
         var prefix = ctx + "system/user";
         
         $("#form-user-edit").validate({
-        	rules:{
+        	onkeyup: false,
+            rules:{
         		email:{
                     email:true,
                     remote: {
