--- a/joine-admin/src/main/resources/templates/system/post/add.html
+++ b/joine-admin/src/main/resources/templates/system/post/add.html
@@ -45,7 +45,8 @@
 		var prefix = ctx + "system/post";
 	    
 		$("#form-post-add").validate({
-			rules:{
+			onkeyup: false,
+            rules:{
 				postName:{
 					remote: {
 		                url: ctx + "system/post/checkPostNameUnique",
