--- a/joine-admin/src/main/resources/templates/monitor/operlog/operlog.html
+++ b/joine-admin/src/main/resources/templates/monitor/operlog/operlog.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org"
-      xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
-<meta charset="utf-8">
-<head th:include="include :: header"></head>
+<html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
+<head>
+    <th:block th:include="include :: header('操作日志列表')" />
+</head>
 <body class="gray-bg">
-
 <div class="container-div">
     <div class="row">
         <div class="col-sm-12 search-collapse">
@@ -23,6 +22,12 @@
                             <option value="">所有</option>
                             <option th:each="dict : ${type}" th:text="${dict.dictLabel}"
                                     th:value="${dict.dictValue}"></option>
+                        </select>
+                        </li>
+                        <li>
+                            <label>操作状态：</label><select name="status" th:with="type=${@dict.getType('sys_common_status')}">
+                            <option value="">所有</option>
+                            <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
                         </select>
                         </li>
                         <li class="select-time">
@@ -63,7 +68,7 @@
     </div>
 </div>
 
-<div th:include="include :: footer"></div>
+<th:block th:include="include :: footer" />
 <script th:inline="javascript">
     var detailFlag = [[${@permission.hasPermi('monitor:operlog:detail')}]];
     var datas = [[${@dict.getType('sys_oper_type')}]];
@@ -81,6 +86,7 @@
             modalName: "操作日志",
             escape: true,
             showPageGo: true,
+            rememberSelected: true,
             columns: [{
                 checkbox: true
             },
@@ -125,7 +131,7 @@
                         if (value == 0) {
                             return '<span class="badge badge-primary">成功</span>';
                         } else if (value == 1) {
-                            return '<span class="badge badge-danger">异常</span>';
+                            return '<span class="badge badge-danger">失败</span>';
                         }
                     }
                 },
