--- a/joine-admin/src/main/resources/templates/system/menu/edit.html
+++ b/joine-admin/src/main/resources/templates/system/menu/edit.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
-<meta charset="utf-8">
-<head th:include="include :: header"></head>
+	<head>
+		<th:block th:include="include :: header('修改菜单')" />
+	</head>
 <body class="white-bg">
 	<div class="wrapper wrapper-content animated fadeInRight ibox-content">
 		<form class="form-horizontal m" id="form-menu-edit" th:object="${menu}">
@@ -70,8 +71,8 @@
 			</div>
 		</form>
 	</div>
-	<div th:include="include::footer"></div>
-	 <script>
+	<th:block th:include="include :: footer" />
+	 <script type="text/javascript">
         var prefix = ctx + "system/menu";
 
         $(function() {
