--- a/joine-admin/src/main/resources/templates/system/menu/menu.html
+++ b/joine-admin/src/main/resources/templates/system/menu/menu.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.w3.org/1999/xhtml">
-<meta charset="utf-8">
-<head th:include="include :: header"></head>
+<html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
+<head>
+	<th:block th:include="include :: header('菜单列表')" />
+</head>
 <body class="gray-bg">
 
     <div class="container-div">
