--- a/joine-admin/src/main/resources/templates/system/post/post.html
+++ b/joine-admin/src/main/resources/templates/system/post/post.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org"
-	xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
-<meta charset="utf-8">
-<head th:include="include :: header"></head>
+<html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
+<head>
+	<th:block th:include="include :: header('岗位列表')" />
+</head>
 <body class="gray-bg">
-	
 	<div class="container-div">
 		<div class="row">
 			<div class="col-sm-12 search-collapse">
