--- a/joine-generator/src/main/resources/vm/html/add.html.vm
+++ b/joine-generator/src/main/resources/vm/html/add.html.vm
@@ -1,7 +1,8 @@
-<!DOCTYPE HTML>
-<html  lang="zh" xmlns:th="http://www.thymeleaf.org">
-<meta charset="utf-8">
-<head th:include="include :: header"></head>
+<!DOCTYPE html>
+<html lang="zh" xmlns:th="http://www.thymeleaf.org" >
+<head>
+	<th:block th:include="include :: header('新增${tableComment}')" />
+</head>
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-${classname}-add">
@@ -38,7 +39,7 @@
 #end
 		</form>
 	</div>
-    <div th:include="include::footer"></div>
+    <th:block th:include="include :: footer" />
     <script type="text/javascript">
 		var prefix = ctx + "${moduleName}/${classname}"
 		$("#form-${classname}-add").validate({
