--- a/joine-generator/src/main/resources/vm/html/edit.html.vm
+++ b/joine-generator/src/main/resources/vm/html/edit.html.vm
@@ -1,7 +1,8 @@
-<!DOCTYPE HTML>
-<html  lang="zh" xmlns:th="http://www.thymeleaf.org">
-<meta charset="utf-8">
-<head th:include="include :: header"></head>
+<!DOCTYPE html>
+<html lang="zh" xmlns:th="http://www.thymeleaf.org" >
+<head>
+    <th:block th:include="include :: header('修改${tableComment}')" />
+</head>
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-${classname}-edit" th:object="${${classname}}">
@@ -39,7 +40,7 @@
 #end
 		</form>
     </div>
-    <div th:include="include::footer"></div>
+    <th:block th:include="include :: footer" />
     <script type="text/javascript">
 		var prefix = ctx + "${moduleName}/${classname}";
 		$("#form-${classname}-edit").validate({
