--- a/joine-quartz/src/main/resources/templates/monitor/job/jobLog.html
+++ b/joine-quartz/src/main/resources/templates/monitor/job/jobLog.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="zh" xmlns:th="http://www.thymeleaf.org"
-	xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
-<meta charset="utf-8">
-<head th:include="include :: header"></head>
+<html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
+<head>
+	<th:block th:include="include :: header('定时任务日志列表')" />
+</head>
 <body class="gray-bg">
 
 	<div class="container-div">
