--- a/joine-generator/src/main/resources/vm/java/Controller.java.vm
+++ b/joine-generator/src/main/resources/vm/java/Controller.java.vm
@@ -3,6 +3,7 @@ package ${basePackage}.web.controller.${moduleName};
 import java.util.List;
 import org.apache.shiro.authz.annotation.RequiresPermissions;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Controller;
 import org.springframework.ui.ModelMap;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -35,8 +36,7 @@ public class ${className}Controller extends BaseController {
 	
 	@RequiresPermissions("${moduleName}:${classname}:view")
 	@GetMapping()
-	public String ${classname}()
-	{
+	public String ${classname}() {
 	    return prefix + "/${classname}";
 	}
 	
@@ -46,8 +46,7 @@ public class ${className}Controller extends BaseController {
 	@RequiresPermissions("${moduleName}:${classname}:list")
 	@PostMapping("/list")
 	@ResponseBody
-	public TableDataInfo list(${className} ${classname})
-	{
+	public TableDataInfo list(${className} ${classname}) {
 		startPage();
         List<${className}> list = ${classname}Service.select${className}List(${classname});
 		return getDataTable(list);
@@ -60,8 +59,7 @@ public class ${className}Controller extends BaseController {
 	@RequiresPermissions("${moduleName}:${classname}:export")
     @PostMapping("/export")
     @ResponseBody
-    public AjaxResult export(${className} ${classname})
-    {
+    public AjaxResult export(${className} ${classname}) {
     	List<${className}> list = ${classname}Service.select${className}List(${classname});
         ExcelUtil<${className}> util = new ExcelUtil<${className}>(${className}.class);
         return util.exportExcel(list, "${classname}");
@@ -71,8 +69,7 @@ public class ${className}Controller extends BaseController {
 	 * 新增${tableComment}
 	 */
 	@GetMapping("/add")
-	public String add()
-	{
+	public String add() {
 	    return prefix + "/add";
 	}
 	
@@ -83,8 +80,7 @@ public class ${className}Controller extends BaseController {
 	@Log(title = "${tableComment}", businessType = BusinessType.INSERT)
 	@PostMapping("/add")
 	@ResponseBody
-	public AjaxResult addSave(${className} ${classname})
-	{		
+	public AjaxResult addSave(${className} ${classname}) {
 		return toAjax(${classname}Service.insert${className}(${classname}));
 	}
 
@@ -92,8 +88,7 @@ public class ${className}Controller extends BaseController {
 	 * 修改${tableComment}
 	 */
 	@GetMapping("/edit/{${primaryKey.attrname}}")
-	public String edit(@PathVariable("${primaryKey.attrname}") ${primaryKey.attrType} ${primaryKey.attrname}, ModelMap modelMap)
-	{
+	public String edit(@PathVariable("${primaryKey.attrname}") ${primaryKey.attrType} ${primaryKey.attrname}, ModelMap modelMap) {
 		${className} ${classname} = ${classname}Service.select${className}ById(${primaryKey.attrname});
 		modelMap.put("${classname}", ${classname});
 	    return prefix + "/edit";
@@ -106,8 +101,7 @@ public class ${className}Controller extends BaseController {
 	@Log(title = "${tableComment}", businessType = BusinessType.UPDATE)
 	@PostMapping("/edit")
 	@ResponseBody
-	public AjaxResult editSave(${className} ${classname})
-	{		
+	public AjaxResult editSave(${className} ${classname}) {
 		return toAjax(${classname}Service.update${className}(${classname}));
 	}
 	
@@ -118,8 +112,7 @@ public class ${className}Controller extends BaseController {
 	@Log(title = "${tableComment}", businessType = BusinessType.DELETE)
 	@PostMapping( "/remove")
 	@ResponseBody
-	public AjaxResult remove(String ids)
-	{		
+	public AjaxResult remove(String ids) {
 		return toAjax(${classname}Service.delete${className}ByIds(ids));
 	}
 	
