--- a/joine-generator/src/main/resources/vm/java/domain.java.vm
+++ b/joine-generator/src/main/resources/vm/java/domain.java.vm
@@ -1,36 +1,42 @@
 package ${package}.domain;
 
+import org.apache.commons.lang3.builder.ToStringBuilder;
+import org.apache.commons.lang3.builder.ToStringStyle;
+import com.github.joine.common.core.domain.BaseEntity;
 #foreach ($column in $columns)
-#if($column.attrType == 'Date')
+    #if($column.attrType == 'Date' && ($column.attrname != 'createBy' && $column.attrname != 'createTime' && $column.attrname != 'updateBy' && $column.attrname != 'updateTime' && $column.attrname != 'remark'))
+    import java.util.Date;
     #break
-#end
+    #end
 #end
 
 /**
  * ${tableComment}表 ${tableName}
- * 
+ *
  * @author ${author}
  * @date ${datetime}
  */
 public class ${className} extends BaseEntity {
 
 	private static final long serialVersionUID = 1L;
-	
+
 #foreach ($column in $columns)
-	/** $column.columnComment */
+    #if($column.attrname != 'createBy' && $column.attrname != 'createTime' && $column.attrname != 'updateBy' && $column.attrname != 'updateTime' && $column.attrname != 'remark')
+    /** $column.columnComment */
 	private $column.attrType $column.attrname;
+    #end
 #end
 
 #foreach ($column in $columns)
-	public void set${column.attrName}($column.attrType $column.attrname) 
-	{
+    #if($column.attrname != 'createBy' && $column.attrname != 'createTime' && $column.attrname != 'updateBy' && $column.attrname != 'updateTime' && $column.attrname != 'remark')
+    public void set${column.attrName}($column.attrType $column.attrname) {
 		this.$column.attrname = $column.attrname;
 	}
 
-	public $column.attrType get${column.attrName}() 
-	{
+	public $column.attrType get${column.attrName}() {
 		return $column.attrname;
 	}
+    #end
 #end
 
     public String toString() {
