配置文件环境区分设置,优化启动sh

--- a/joine-admin/src/main/resources/templates/index.html
+++ b/joine-admin/src/main/resources/templates/index.html
@@ -184,7 +184,7 @@
 <script th:src="@{/js/plugins/slimscroll/jquery.slimscroll.min.js}"></script>
 <script th:src="@{/ajax/libs/blockUI/jquery.blockUI.js}"></script>
 <script th:src="@{/ajax/libs/layer/layer.min.js}"></script>
-<script src="http://tajs.qq.com/stats?sId=62048022"></script>
+<script src="https://tajs.qq.com/stats?sId=62048022"></script>
 <script th:src="@{/joine/js/je-ui.js?v=1.1.0}"></script>
 <script th:src="@{/joine/index.js}"></script>
 <script th:src="@{/ajax/libs/fullscreen/jquery.fullscreen.js}"></script>
