--- a/joine-admin/src/main/resources/templates/login.html
+++ b/joine-admin/src/main/resources/templates/login.html
@@ -67,7 +67,7 @@
 <script src="../static/ajax/libs/validate/messages_zh.min.js" th:src="@{/ajax/libs/validate/messages_zh.min.js}"></script>
 <script src="../static/ajax/libs/layer/layer.min.js" th:src="@{/ajax/libs/layer/layer.min.js}"></script>
 <script src="../static/ajax/libs/blockUI/jquery.blockUI.js" th:src="@{/ajax/libs/blockUI/jquery.blockUI.js}"></script>
-<script src="http://tajs.qq.com/stats?sId=62048022"></script>
+<script src="https://tajs.qq.com/stats?sId=62048022"></script>
 <script src="../static/joine/js/je-ui.js" th:src="@{/joine/js/je-ui.js?v=1.1.0}"></script>
 <script src="../static/joine/login.js" th:src="@{/joine/login.js}"></script>
 </body>
