优化js, 去掉qq统计等

--- a/joine-admin/src/main/resources/templates/monitor/operlog/operlog.html
+++ b/joine-admin/src/main/resources/templates/monitor/operlog/operlog.html
@@ -88,6 +88,7 @@
             showPageGo: true,
             rememberSelected: true,
             columns: [{
+                field: 'state',
                 checkbox: true
             },
                 {
