--- a/joine-admin/src/main/resources/templates/system/role/selectUser.html
+++ b/joine-admin/src/main/resources/templates/system/role/selectUser.html
@@ -57,6 +57,7 @@
             clickToSelect: true,
             rememberSelected: true,
             columns: [{
+                field: 'state',
                 checkbox: true
             },
                 {
@@ -109,7 +110,7 @@
         };
     }
 
-    /* 分配用户-选择用户-提交 */
+    /* 添加用户-选择用户-提交 */
     function submitHandler() {
         var rows = $.table.selectFirstColumns();
         if (rows.length == 0) {
