--- a/joine-admin/src/main/resources/templates/main.html
+++ b/joine-admin/src/main/resources/templates/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--360浏览器优先以webkit内核解析-->
     <title>Joine介绍</title>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" th:href="@{favicon.ico}"/>
     <link href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet"/>
     <link href="../static/css/font-awesome.min.css" th:href="@{/css/font-awesome.min.css}" rel="stylesheet"/>
     <link href="../static/css/main/animate.min.css" th:href="@{/css/main/animate.min.css}" rel="stylesheet"/>
@@ -28,7 +28,7 @@
                 <a class="btn btn-info btn-outline" href="https://github.com/jenphyjohn/joine" target="_blank">
                     <i class="fa fa-cloud"> </i> 访问GitHub
                 </a>
-                <a class="btn btn-white btn-bitbucket" href="http://join-e.tech" target="_blank">
+                <a class="btn btn-white btn-bitbucket" href="https://join-e.tech/mana" target="_blank">
                     <i class="fa fa-home"></i> 访问主页
                 </a>
             </p>
@@ -58,7 +58,7 @@
 
                     </div>
                     <div class="ibox-content">
-                        <p><i class="fa fa-send-o"></i> 官网：<a href="https://www.join-e.tech" target="_blank">https://www.join-e.tech</a>
+                        <p><i class="fa fa-send-o"></i> 官网：<a href="https://www.join-e.tech/mana" target="_blank">https://www.join-e.tech</a>
                         </p>
                         <p><i class="fa fa-qq"></i> QQ群：573146539
                         </p>
