增加系统功能介绍， 优化国际化

--- a/joine-admin/src/main/resources/templates/main.html
+++ b/joine-admin/src/main/resources/templates/main.html
@@ -14,7 +14,7 @@
 
 <body class="gray-bg">
     <div class="row  border-bottom white-bg dashboard-header">
-        <div class="col-sm-5">
+        <div class="col-sm-4">
             <h2>Joine后台管理系统</h2>
             <p>Joine后台管理系统可用于大多数Web应用程序，如<b>网站管理后台</b>，<b>网站会员中心</b>，<b>CMS</b>，<b>CRM</b>，<b>OA</b>等等，甚至可以在此基础上深度开发，做出更复杂的系统。前后台代码高度封装极易上手。</p>
             <p>
@@ -33,7 +33,7 @@
                 </a>
             </p>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-3">
             <h4>技术选型：</h4>
             <ol>
                 <li>核心框架：Spring Boot。</li>
@@ -46,7 +46,18 @@
                 <li>更多……</li>
             </ol>
         </div>
-
+        <div class="col-sm-5">
+            <h4>功能支持：</h4>
+            <ol>
+                <li>后台管理：用户管理、角色管理、菜单管理、部门管理、岗位管理</li>
+                <li>参数配置：数据字典、系统参数</li>
+                <li>日志监控：定时任务、操作日志、登录日志、在线用户、数据监控、服务器监控</li>
+                <li>开发工具：表单构建、代码生成、Swagger文档</li>
+				<li>前端工程：JWT Token登录、Restful接口</li>
+                <li>其他功能：国际化资源、多Module支持等</li>
+                <li>更多……</li>
+            </ol>
+        </div>
     </div>
     <div class="wrapper wrapper-content">
         <div class="row">
