优化swagger, 新增下拉样式组件, 样式微调, 增加本部门数据权限, 优化文件上传Util, 调整pom结构, 解决AOP失效问题, 增加页面获取用户信息方法

--- a/joine-admin/src/main/resources/templates/monitor/operlog/operlog.html
+++ b/joine-admin/src/main/resources/templates/monitor/operlog/operlog.html
@@ -2,6 +2,7 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro">
 <head>
     <th:block th:include="include :: header('操作日志列表')" />
+    <th:block th:include="include :: bootstrap-select-css" />
 </head>
 <body class="gray-bg">
 <div class="container-div">
@@ -16,12 +17,9 @@
                         <li>
                             <label>操作人员： </label><input type="text" name="operName"/>
                         </li>
-                        <li>
-                            <label>操作类型： </label><select name="businessType"
-                                                         th:with="type=${@dict.getType('sys_oper_type')}">
-                            <option value="">所有</option>
-                            <option th:each="dict : ${type}" th:text="${dict.dictLabel}"
-                                    th:value="${dict.dictValue}"></option>
+                        <li class="select-selectpicker">
+                            <label>操作类型： </label><select id="businessTypes" th:with="type=${@dict.getType('sys_oper_type')}" class="selectpicker" data-none-selected-text="请选择" multiple>
+                            <option th:each="dict : ${type}" th:text="${dict.dictLabel}" th:value="${dict.dictValue}"></option>
                         </select>
                         </li>
                         <li>
@@ -39,9 +37,9 @@
                                    name="params[endTime]"/>
                         </li>
                         <li>
-                            <a class="btn btn-info btn-rounded btn-sm" onclick="$.table.search()"><i
+                            <a class="btn btn-info btn-rounded btn-sm" onclick="searchPre()"><i
                                     class="fa fa-search"></i>&nbsp;搜索</a>
-                            <a class="btn btn-info btn-rounded btn-sm" onclick="$.form.reset()"><i
+                            <a class="btn btn-info btn-rounded btn-sm" onclick="resetPre()"><i
                                     class="fa fa-refresh"></i>&nbsp;重置</a>
                         </li>
                     </ul>
@@ -69,6 +67,7 @@
 </div>
 
 <th:block th:include="include :: footer" />
+<th:block th:include="include :: bootstrap-select-js" />
 <script th:inline="javascript">
     var detailFlag = [[${@permission.hasPermi('monitor:operlog:detail')}]];
     var datas = [[${@dict.getType('sys_oper_type')}]];
@@ -153,6 +152,16 @@
         };
         $.table.init(options);
     });
+    function searchPre() {
+        var data = {};
+        data.businessTypes = $.common.join($('#businessTypes').selectpicker('val'));
+        $.table.search('operlog-form', data);
+    }
+
+    function resetPre() {
+        $.form.reset();
+        $("#businessTypes").selectpicker('refresh');
+    }
 </script>
 </body>
 </html>
