--- a/joine-quartz/src/main/resources/templates/monitor/job/job.html
+++ b/joine-quartz/src/main/resources/templates/monitor/job/job.html
@@ -38,7 +38,7 @@
             <a class="btn btn-info" onclick="$.operate.add()" shiro:hasPermission="monitor:job:add">
                 <i class="fa fa-plus"></i> 新增
             </a>
-            <a class="btn btn-info btn-edit disabled" onclick="$.operate.edit()" shiro:hasPermission="system:job:edit">
+            <a class="btn btn-info btn-edit disabled" onclick="$.operate.edit()" shiro:hasPermission="monitor:job:edit">
                 <i class="fa fa-edit"></i> 修改
             </a>
             <a class="btn btn-danger btn-del disabled" onclick="$.operate.removeAll()" shiro:hasPermission="monitor:job:remove">
